--- a/gaas-rest/pom.xml
+++ b/gaas-rest/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
             <artifactId>federated-store</artifactId>
-            <version>1.13.3-SNAPSHOT</version>
+            <version>1.13.3</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
