--- a/gaas-rest/deploy/helm/values.yaml
+++ b/gaas-rest/deploy/helm/values.yaml
@@ -14,7 +14,8 @@
 
 replicaCount: 1
 image:
-  repository: kitkat520/api
+  #Set the repository value below to your own
+  repository: dockerhub/repo
   pullPolicy: IfNotPresent
   tag: latest
   containerPort: 8080
