--- a/gaffer-as-a-service/gaas-common/pom.xml
+++ b/gaffer-as-a-service/gaas-common/pom.xml
@@ -11,55 +11,12 @@
     <name>gaas-common</name>
     <description>Gaas common</description>
 
-    <properties>
-        <kubernetes.version>11.0.0</kubernetes.version>
-        <slf4j.api.version>1.7.25</slf4j.api.version>
-        <junit.version>5.7.0</junit.version>
-        <apache.commons.text.version>1.9</apache.commons.text.version>
-        <compiler.plugin.version>2.3.2</compiler.plugin.version>
-        <surefire.version>3.0.0-M5</surefire.version>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>io.kubernetes</groupId>
-            <artifactId>client-java</artifactId>
-            <version>${kubernetes.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.kubernetes</groupId>
-            <artifactId>client-java-extended</artifactId>
-            <version>${kubernetes.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-text</artifactId>
-            <version>${apache.commons.text.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.gov.gchq.gaffer</groupId>
-            <artifactId>graph</artifactId>
-            <version>${gaffer.version}</version>
-        </dependency>
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${compiler.plugin.version}</version>
+                <version>2.3.2</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
@@ -68,7 +25,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire.version}</version>
+                <version>3.0.0-M5</version>
             </plugin>
         </plugins>
     </build>
