--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
             <artifactId>gaas-common</artifactId>
-            <version>1.13.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
