--- a/gaas-rest/pom.xml
+++ b/gaas-rest/pom.xml
@@ -122,6 +122,12 @@
             <version>1.13.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>uk.gov.gchq.gaffer</groupId>
+            <artifactId>proxy-store</artifactId>
+            <version>1.13.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <profiles>
 
