--- a/gaas-ui/.eslintrc.json
+++ b/gaas-ui/.eslintrc.json
@@ -25,6 +25,8 @@
     "semi": 2,
     "semi-style": ["error", "last"],
     "quotes": [2, "single"],
+    "space-in-brackets": ["error", "always"],
+    "comma-dangle": ["error", "never"],
     "indent": 2,
     "default-case": 1,
     "no-duplicate-imports": 2,
