--- a/gaas-ui/.eslintrc.json
+++ b/gaas-ui/.eslintrc.json
@@ -21,6 +21,7 @@
     "prefer-arrow-callback": "error",
     "arrow-parens": ["error", "always"],
     "arrow-body-style": ["error", "as-needed"],
+    "quotes": [2, "double", "avoid-escape"],
     "new-cap": "error",
     "no-invalid-this": "error",
     "prefer-const": "error",
@@ -35,7 +36,7 @@
         "trailingComma": "es5",
         "tabWidth": 4,
         "semi": true,
-        "singleQuote": true,
+        "singleQuote": false,
         "bracketSpacing": true,
         "eslintIntegration": true
       }
