--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -57,6 +57,8 @@
     "@types/jest": "26.0.15",
     "@types/morgan": "^1.9.2",
     "@types/react-router-dom": "^5.1.6",
+    "@types/statuses": "^2.0.0",
+    "@types/supertest": "^2.0.10",
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
