--- a/gaas-ui/deploy/helm/values.yaml
+++ b/gaas-ui/deploy/helm/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   #Ask about repository setting
-  repository: macenturalxl1/gaas-ui
+  repository: gchq/gaas-ui
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: 'latest'
@@ -25,6 +25,6 @@ envConfigFile: "env-config.js"
 
 envVariables:
   reactAPIPlatform: "test"
-  kaiRestAPIHost: "http://openshift.host.co.uk/"
-  cognitoUserpoolID: "us-east-1_ABC1def2g"
+  kaiRestAPIHost: "http://kubernetes.host.co.uk/"
+  cognitoUserpoolID: "us-east-1_uS3rPo0L1D"
   cognitoClientID: "c0gN1t0Id"
