--- a/gaas-rest/deploy/helm/values.yaml
+++ b/gaas-rest/deploy/helm/values.yaml
@@ -15,7 +15,7 @@
 replicaCount: 1
 image:
   #Set the repository value below to your own
-  repository: kitkat520/api
+  repository: dockerhub/repo
   pullPolicy: Always
   tag: latest
   containerPort: 8080
