--- a/gaas-rest/deploy/helm/templates/configmap.yaml
+++ b/gaas-rest/deploy/helm/templates/configmap.yaml
@@ -1,5 +1,4 @@
-#
-# Copyright 2016-2020 Crown Copyright
+# Copyright 2020 Crown Copyright
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,12 +11,9 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
-
-jwt.secret=javainuse
-group=gchq.gov.uk
-version=v1
-kind=Gaffer
-gaffer.namespace=kai-dev
-admin.username=javainuse
-admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "helm.fullname" . }}
+data:
+  namespace: {{ .Values.namespace}}
