Set namespace as env variable in Helm

--- a/gaas-rest/deploy/helm/templates/configmap.yaml
+++ b/gaas-rest/deploy/helm/templates/configmap.yaml
@@ -16,4 +16,4 @@ kind: ConfigMap
 metadata:
   name: {{ include "helm.fullname" . }}
 data:
-  namespace: {{ .Values.namespace}}
+  GAFFER_NAMESPACE: {{ .Values.namespace}}
