--- a/gaas-rest/deploy/helm/templates/deployment.yaml
+++ b/gaas-rest/deploy/helm/templates/deployment.yaml
@@ -34,20 +34,6 @@ spec:
       containers:
         - image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           name: gaas-rest
-          env:
-            - name: namespace
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ include "helm.fullname" . }}
-                  key: namespace
-          volumeMounts:
-            - name: application-config
-              mountPath: "/deployments/config"
-              readOnly: true
-      volumes:
-        - name: application-config
-          configMap:
-            name: {{ include "helm.fullname" . }}
-            items:
-              - key: application.properties
-                path: application.properties
+          envFrom:
+            - configMapRef:
+                name: {{ include "helm.fullname" . }}
