--- a/gaas-rest/src/main/resources/application.properties
+++ b/gaas-rest/src/main/resources/application.properties
@@ -21,3 +21,4 @@ kind=Gaffer
 gaffer.namespace=kai-dev
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
+management.endpoints.web.exposure.include=env
