[UI] Gh-56 UI Linting Issue & Gh-57 Add Proxy Store Graph UI Form (#58)
* Updated ESLint

* Changes to ESLint

* Linting set up

* Changes to linting

* Eslint

* Minor Changes

* Minor Change

* Updated package.json

* Fixed errors

* added proxy to ui

* Minor changes

* fixed logic

* logic check

* linting

* Fixed logic so proxy graphs must have a URL to be added

* Added an input for proxy store root

* test for proxy store being added

* tests for proxy store in add graph

* added root/url to request body

* make tests inline with lint

* Linting

* Linting and proxy form

* Fixed test

* Removed unused prettier from package json

* UI image pull policy: Always

* Formatting

Co-authored-by: K-itKat20 <LaurelKatie@tutanota.com>
Co-authored-by: macenturalxl1 <macenturalxl1@tutanota.com>
Co-authored-by: macenturalxl1 <60737474+macenturalxl1@users.noreply.github.com>

--- a/gaas-ui/deploy/helm/values.yaml
+++ b/gaas-ui/deploy/helm/values.yaml
@@ -6,8 +6,8 @@ replicaCount: 1
 
 image:
   #Ask about repository setting
-  repository: macenturalxl1/gaas-ui
-  pullPolicy: IfNotPresent
+  repository: gchq/gaas-ui
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: 'latest'
   containerPort: 8081
@@ -25,6 +25,6 @@ envConfigFile: "env-config.js"
 
 envVariables:
   reactAPIPlatform: "test"
-  kaiRestAPIHost: "http://openshift.host.co.uk/"
-  cognitoUserpoolID: "us-east-1_ABC1def2g"
+  kaiRestAPIHost: "http://kubernetes.host.co.uk/"
+  cognitoUserpoolID: "us-east-1_uS3rPo0L1D"
   cognitoClientID: "c0gN1t0Id"
