--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -41,7 +41,7 @@
     "react-json-view": "^1.19.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.0",
     "react-testing-library": "latest",
     "react-toastify": "^6.1.0",
     "statuses": "^2.0.1"
@@ -57,6 +57,8 @@
     "@types/jest": "26.0.15",
     "@types/morgan": "^1.9.2",
     "@types/react-router-dom": "^5.1.6",
+    "@types/statuses": "^2.0.0",
+    "@types/supertest": "^2.0.10",
     "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
@@ -67,19 +69,16 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "eslint-config-prettier": "^6.15.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-notice": "^0.9.10",
-    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.1.2",
     "fetch-mock": "^9.11.0",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
-    "prettier": "^2.2.1",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
