--- a/gaas-rest/src/test/resources/application.properties
+++ b/gaas-rest/src/test/resources/application.properties
@@ -19,7 +19,7 @@ group=gchq.gov.uk
 version=v1
 kind=Gaffer
 gaffer.namespace=kai-dev
-ingress.suffix=apps.k8s.example.com
+ingress.suffix=apps.my.kubernetes.cluster
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
 management.endpoints.web.exposure.include=env
