--- a/Dockerfile.gaas-rest
+++ b/Dockerfile.gaas-rest
@@ -7,14 +7,9 @@ ARG BASE_IMAGE_TAG=stretch-20201117-slim
 FROM ${BUILDER_IMAGE_NAME}:${BUILDER_IMAGE_TAG} as builder
 WORKDIR /workspace
 
-COPY ./target ./gaffer-experimental/target
+COPY . .
 
-RUN if [ ! -f ./gaffer-experimental/target/gaas-rest-0.0.1-SNAPSHOT-exec.jar ]; then \
-        rm -rf ./gaffer-experimental && \
-        git clone https://github.com/gchq/gaffer-experimental.git && \
-        cd gaffer-experimental && \
-        mvn clean install -Pquick -pl :gaas-rest -am; \
-    fi
+RUN mvn clean install -Pquick -pl :gaas-rest -am;
 
 FROM ${BASE_IMAGE_NAME}:${BASE_IMAGE_TAG}
 ARG USER=spring
@@ -28,5 +23,5 @@ RUN mkdir -p /usr/share/man/man1 && \
 
 USER ${USER}
 WORKDIR /spring
-COPY --from=builder /workspace/gaffer-experimental/target/gaas-rest-0.0.1-SNAPSHOT-exec.jar ./gaas-rest.jar
+COPY --from=builder /workspace/gaas-rest/target/gaas-rest-*-exec.jar ./gaas-rest.jar
 ENTRYPOINT [ "java", "-jar", "./gaas-rest.jar"]
