--- a/gaas-ui/deploy/helm/templates/deployment.yaml
+++ b/gaas-ui/deploy/helm/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: {{ .Values.image.repository }}
+          image:  {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
