--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -44,7 +44,7 @@ env:
   # See https://github.com/redhat-actions/oc-login#readme for how to retrieve these values.
   OPENSHIFT_SERVER: ${{ secrets.OPENSHIFT_SERVER }}
   OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
-
+  CLUSTER_URL: ${{ secrets.CLUSTER_URL }}
   # ⬇️ EDIT with the port your application should be accessible on.
   APP_PORT: 8080
 
@@ -72,6 +72,9 @@ jobs:
         SELECTOR: ${{ steps.deploy-and-expose.outputs.selector }}
 
     steps:
+    - name: Add mask
+      run: |
+        echo "::add-mask::$CLUSTER_URL" 
     - name: Check if secrets exists
       uses: actions/github-script@v3
       with:
