--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -129,7 +129,7 @@ jobs:
         # https://github.com/redhat-actions/buildah-build#scratch-build-inputs
         # Otherwise, point this to your Dockerfile relative to the repository root.
         dockerfiles: |
-          ./Dockerfile
+          ./Dockerfile.gaas-rest
 
     # https://github.com/redhat-actions/push-to-registry#readme
     - name: Push to registry
