--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -53,7 +53,7 @@ env:
 
   # If you wish to manually provide the APP_NAME and TAG, set them here, otherwise they will be auto-detected.
   APP_NAME: ""
-  TAG: ""
+  TAG: "latest"
 
 on:
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
