--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
@@ -15,8 +15,10 @@
 #
 
 jwt.secret=javainuse
-gaffer.namespace=kai-dev
-ingress.suffix=apps.k8s.example.com
+group=gchq.gov.uk
+version=v1
+kind=Gaffer
+namespace=kai-dev
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
 
