--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
@@ -18,6 +18,6 @@ jwt.secret=javainuse
 group=gchq.gov.uk
 version=v1
 kind=Gaffer
-namespace=kai-helm-3
+namespace=kai-dev
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
