refactoring to gaas-common shared classes gaas-rest and gaffer-controller

--- a/gaffer-as-a-service/gaas-rest/pom.xml
+++ b/gaffer-as-a-service/gaas-rest/pom.xml
@@ -52,12 +52,12 @@
             <version>${gaffer.version}</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
+       <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
-            <artifactId>gaffer-controller</artifactId>
+            <artifactId>gaas-common</artifactId>
             <version>${gaffer.version}</version>
             <scope>compile</scope>
-        </dependency>
+       </dependency>
         <dependency>
             <groupId>uk.gov.gchq.gaffer</groupId>
             <artifactId>proxy-store</artifactId>
