--- a/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
+++ b/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
@@ -15,7 +15,7 @@
 replicaCount: 1
 image:
   #Set the repository value below to your own
-  repository: kitkat520/api
+  repository: go159lab/gaas-rest-23
   pullPolicy: Always
   tag: latest
   containerPort: 8080
