--- a/gaffer-as-a-service/pom.xml
+++ b/gaffer-as-a-service/pom.xml
@@ -77,6 +77,12 @@
                 <artifactId>graph</artifactId>
                 <version>${gaffer.version}</version>
             </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.gaffer</groupId>
+                <artifactId>gaas-common</artifactId>
+                <version>${gaffer.version}</version>
+                <scope>compile</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
