resolve requested changes for PR

--- a/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
+++ b/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
@@ -15,8 +15,8 @@
 replicaCount: 1
 image:
   #Set the repository value below to your own
-  repository: kitkat520/api
-  pullPolicy: Always
+  repository: dockerhub/repo
+  pullPolicy: IfNotPresent
   tag: latest
   containerPort: 8080
 imagePullSecrets: []
