--- a/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
+++ b/gaffer-as-a-service/gaas-rest/deploy/helm/values.yaml
@@ -16,7 +16,7 @@ replicaCount: 1
 image:
   #Set the repository value below to your own
   repository: dockerhub/repo
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: latest
   containerPort: 8080
 imagePullSecrets: []
