--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -123,7 +123,7 @@ jobs:
       id: image-build
       uses: redhat-actions/buildah-build@v2
       with:
-        image: $${{ steps.extract_branch.outputs.branch }}-rest
+        image: ${{ steps.extract_branch.outputs.branch }}-rest
         tags: ${{ env.TAG }}
         # If you don't have a dockerfile, see:
         # https://github.com/redhat-actions/buildah-build#scratch-build-inputs
