--- a/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
+++ b/gaffer-as-a-service/gaas-rest/src/main/resources/application.properties
@@ -20,4 +20,4 @@ ingress.suffix=apps.k8s.example.com
 admin.username=javainuse
 admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
 
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=prometheus,metrics
