Changes to docker files

--- a/gaffer-as-a-service/gaas-rest/docker-compose.yml
+++ b/gaffer-as-a-service/gaas-rest/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.3'
 services:
   gaas-rest:
-    image: "gaas-prom:latest"
+    image: "kitkat520/api"
     ports:
       - "8080:8080"
-    container_name: gaas-prom
+    container_name: gaas-rest
   prometheus:
     image: "prom/prometheus"
     ports:
