--- a/gaffer-as-a-service/gaas-rest/prometheus.yaml
+++ b/gaffer-as-a-service/gaas-rest/prometheus.yaml
@@ -4,8 +4,8 @@ global:
   # scrape_timeout is set to the global default (10s).
 
 scrape_configs:
-  - job_name: 'gaas rest api'
+  - job_name: 'gaas-rest-api'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:8080']
+      - targets: ['host.docker.internal:8080']
